# sachverhalt-server

./: README.md  sachverhalt-server.cabal
src/: Dependencies.hs  ServerM.hs
src/Sachverhalt/Server/: .ServerM.hs.swp  Monad.hs  ServerM.hs
