name:                sachverhalt-server
version:             0.1.0.0
synopsis:            The server-side reference implementation of the sachverhalt protocol
description:         The server-side reference implementation of the sachverhalt protocol
category:            Development

license:             BSD3
license-file:        LICENSE

author:              fro_ozen
maintainer:          fro_ozen@gmx.de
homepage:            https://github.com/firecoders/sachverhalt-server
bug-reports:         https://github.com/firecoders/sachverhalt-server

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repositor head
  type:              git
  bug-reports:       https://github.com/firecoders/sachverhalt-server

library
  exposed-modules:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
