name:                sachverhalt-server
version:             0.1.0.0
synopsis:            The server-side reference implementation of the sachverhalt protocol
description:         The server-side reference implementation of the sachverhalt protocol
category:            Development

license:             BSD3
license-file:        LICENSE

author:              fro_ozen
maintainer:          fro_ozen@gmx.de
homepage:            https://github.com/firecoders/sachverhalt-server
bug-reports:         https://github.com/firecoders/sachverhalt-server

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:              git
  bug-reports:       https://github.com/firecoders/sachverhalt-server

library
  exposed-modules:     Sachverhalt.Server.ServerM
  build-depends:       base >=4.7 && <4.8,
                       mtl >= 2.2.1,
                       transformers >= 0.3.0.0,
                       aeson >= 0.8.0.2,
                       unordered-containers >= 0.2.5.1,
                       text >= 1.2.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
